better iframe embedding
Former-commit-id: 94d592c914bdfcd071d680b8036debf84ad67466 [formerly e52ebd7fdb4d9da5315b115c58005ae20c83856f]
Former-commit-id: 3e195ba0ea036ec0297af7ad14c9e1c5f56d5ec5

--- a/_includes/PearyColony.html
+++ b/_includes/PearyColony.html
@@ -79,8 +79,8 @@
 <section class="frameContainer" id="PearyModels">
  <div class="framePairTop">
   <div class="framewrap frame16x9">
-						<iframe src="PolarHab.html" frameborder="0" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
-						</iframe>
+				<iframe src="PolarHab.html" frameborder="0" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="" style="overflow-y: hidden;" scrolling="no">
+				</iframe>
 		</div>
  </div>
  <div class="framePairBottom">
