--- a/_includes/asideMain.html
+++ b/_includes/asideMain.html
@@ -16,7 +16,7 @@
 	</div>
 	<div class="sideDiv">
 		<div class="framewrap frame16x9">
-	 		<iframe src="https://www.youtube.com/embed/vF--hweQ1Ec" allowfullscreen></iframe>
+	 		<iframe src="youtubeVideo.html" style="overflow-y: hidden;" scrolling="no"></iframe>
 		</div>
 	</div>
 </aside>
