--- a/_includes/machines/machinesBuilding.html
+++ b/_includes/machines/machinesBuilding.html
@@ -121,7 +121,7 @@
 <div class="framePairTop" id="BasaltFiberStation">
 	<div class="framewrap frame16x9">
 					<iframe src="BasaltFiberProd.html" frameborder="0" allowfullscreen
-					mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
+					mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="" style="overflow-y: hidden;" scrolling="no">
 					</iframe>
 	</div>
 </div>
@@ -131,7 +131,7 @@
 <div class="framePairTop" id="MIPstation">
 	<div class="framewrap frame16x9">
 					<iframe src="MIPstation.html" frameborder="0" allowfullscreen
-					mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
+					mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="" style="overflow-y: hidden;" scrolling="no">
 					</iframe>
 	</div>
 </div>
@@ -141,7 +141,7 @@
 <div class="framePairTop" id="HangarsOverview">
 	<div class="framewrap frame16x9">
 					<iframe src="HangarsCutaway.html" frameborder="0" allowfullscreen
-					mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
+					mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="" style="overflow-y: hidden;" scrolling="no">
 					</iframe>
 	</div>
 </div>
