--- a/_layouts/modelProxy.html
+++ b/_layouts/modelProxy.html
@@ -7,6 +7,9 @@
 	border: 5px solid transparent;
 	border-width: 5px;
 	border-radius: 5px;
+	max-width: 95%;
+	max-height: 95%;
+	margin-top: -3px;
 }
 .overlay:hover {
 	border-style: solid;
