--- a/_layouts/toolTemplate.html
+++ b/_layouts/toolTemplate.html
@@ -3,6 +3,10 @@
 	<head>
 		<title>{{page.title}}</title>
 		{%include commonHeadElements.html%}
+		<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
+		<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
+		<link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
+		<link rel="icon" type="image/svg+xml" href="img/animatedIcon.svg"><!--svg icon in Firefox, ignored in other browsers-->
 		<style>
 body{
 	font-family:Arial,Helvetica,sans-serif;
