--- a/sass/_nav.sass
+++ b/sass/_nav.sass
@@ -43,12 +43,22 @@ nav > ul > li:nth-child(1)
 
 nav > ul > li:nth-child(2)
   left: 25%
+  ul
+    position: relative
+    left: -25%
 
 nav > ul > li:nth-child(3)
   left: 50%
+  ul
+    position: relative
+    left: -50%
+
 
 nav > ul > li:nth-child(4)
   left: 75%
+  ul
+    position: relative
+    left: -75%
 
 /* Make dropdown menus:
   ul that is a CHILD of li which is a DESCENDENT of nav
