--- a/sass/_nav.sass
+++ b/sass/_nav.sass
@@ -50,7 +50,6 @@ nav li > ul
   padding: 10px
   text-align: center
   margin: 0
-  width: 90vw
 
 nav > li > ul li
   +flex(1 1 auto)
@@ -65,4 +64,4 @@ nav  li:hover > ul
   +display(flex)
   +align-items(flex-start)
   +justify-content(flex-start)
-  +flex-flow(row wrap)
+  +flex-flow(column nowrap)
