--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,15 @@
 		<link rel="alternate" type="application/rss+xml" title="Moonwards News" href="/feed/rss.xml">
 		<link rel="stylesheet" href="{{page.stylesheet}}">
 		<link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,300i,400,400i,600" rel="stylesheet">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<script type="text/javascript" src="js/tooltipster.bundle.min.js"></script>
+		<script>
+$(document).ready(function() {
+	 $('.tooltip').tooltipster({
+		interactive: true
+	});
+});
+		</script>
 	</head>
 <body>
 {%include obsolete-warning.html %}
