--- a/sass/_nav.sass
+++ b/sass/_nav.sass
@@ -27,6 +27,7 @@ nav > ul
   padding: 5px 20px
   position: absolute
   top: 0
+  background-color: #000
 
 
 
@@ -37,6 +38,7 @@ nav > ul > li
   padding: 5px
   position: absolute
   top: 0
+  background-color: black
 
 nav > ul > li:nth-child(1)
   left: 0
