--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,10 +3,7 @@
 <html lang="en-US">
 	<head>
 		<title>{{page.title}}</title>
-		<meta charset="utf-8">
-		<meta http-equiv="x-ua-compatible" content="IE=edge, chrome=1">
-		<meta name="theme-color" content="#ffffff">
-		<meta name="description" content="{{page.description}}">
+		{% include commonHeadElements.html %}
 		<link rel="stylesheet" href="https://www.moonwards.com/css/posts.nest.sass.css">
 		<link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,300i,400,400i,600" rel="stylesheet">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
