--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,8 +2,9 @@
 		<ul>
 			<li><a href="index.html">Mission</a>
       <ul>
-						<li><a href="timeline.html">Timeline</a></li>
-						<li><a href="project.html">Project</a>
+							<li><a href="timeline.html">Timeline</a></li>
+       <li><a href="model.html">Model</a></li>
+							<li><a href="project.html">Project</a>
 								<ul>
 									<li><a target="_blank" href="http://moonwards1.blogspot.com/">Blogger</a></li>
 									<li><a href="http://www.moonwards.com/forum/">Forum</a></li>
