--- a/sass/_nav.sass
+++ b/sass/_nav.sass
@@ -2,46 +2,52 @@ nav
   width: 100%
   position: fixed
   top: 0
+  left: 0
   z-index: 20
   background-color: #000
-  ul
-    list-style-type: none
-    background-color: #000
-
-  a
-    text-decoration: none
-    font-weight: 300
-    color: $navAnchor
-    &:visited
-      color: $navAnchor
-    &:hover
-      color: $navAHover
-      background-color: inherit
-    &:active
-      color: $navAHover
-      background-color: inherit
 
 nav > ul
-  box-sizing: border-box
+  list-style-type: none
   width: 100%
-  padding: 5px 20px
-  position: absolute
-  top: 0
-  background-color: #000
+  height: 1.7rem
+  margin: 0
+  padding: 0
 
+nav a
+  text-decoration: none
+  font-weight: 300
+  padding: 0.5rem
+  color: $navAnchor
+  &:visited
+    color: $navAnchor
+  &:hover
+    color: $navAHover
+  &:active
+    color: $navAHover
 
+li ul
+  background-color: $aHoverBk
+  list-style-type: none
+
+li ul a
+  padding: 0.1rem 0.3rem 0.3rem 0.3rem
+
+li ul a:hover
+  background-color: transparent
 
 nav > ul > li
   display: inline
-  font-size: 18px
+  font-size: 1.2rem
   font-weight: 300
-  padding: 5px
   position: absolute
   top: 0
-  background-color: black
 
 nav > ul > li:nth-child(1)
-  left: 0
+  left: 0.5rem
+  ul
+    position: relative
+    top: 0
+
 
 nav > ul > li:nth-child(2)
   left: 25%
@@ -64,26 +70,34 @@ nav > ul > li:nth-child(4)
 
 /* Make dropdown menus:
   ul that is a CHILD of li which is a DESCENDENT of nav
-nav li > ul
+nav > ul > li > ul
   display: none
+  width: 60vw
+  height: auto
+  padding: 0.2rem 1rem 1rem 1rem
   border-radius: 15px
-  border: 1px solid #666
-  border-top: none
-  padding: 10px
-  text-align: center
   margin: 0
-  width: 90vw
 
 /* Statement applies only to
   child ul, only when li is hovered
-nav  li:hover > ul
+nav > ul > li:hover > ul
   +display(flex)
   +align-items(flex-start)
-  +justify-content(center)
+  +justify-content(flex-start)
   +flex-flow(row wrap)
 
-nav li > ul li
-  +flex(1 1 auto)
-  font-size: 18px
+nav > ul > li > ul > li
+  +flex(1 1 9rem)
+  font-size: 1.2rem
   font-weight: 300
-  padding: 5px
+  padding: 0
+  +display(flex)
+  +align-items(flex-start)
+  +justify-content(flex-start)
+  +flex-flow(column nowrap)
+
+nav > ul > li > ul > li ul
+  padding: 0 0.6rem 0.6rem 0.2rem
+  font-size: 0.9em
+  letter-spacing: 0.1rem
+  border-left: 2px solid $darkAccent
