--- a/sass/_iframes.sass
+++ b/sass/_iframes.sass
@@ -39,6 +39,7 @@
     width: 100%
     height: 100%
     border: 1px solid $lightAccent
+    overflow-y: hidden
 
 .frame16x9
   padding-bottom: 56.25%
