--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -14,7 +14,17 @@
 			</li>
 			<li><a href="colonies.html">Colonies</a>
       <ul>
-						<li><a href="colonies.html#lalande">Lalande</a></li>
+						<li><a href="colonies.html#lalande">Lalande</a>
+        <ul>
+         <li><a href="lalande.html">Site</a>
+         <ul>
+         <li><a href="lalande.html#LalSoilTemp">Rockiness</a></li>
+         <li><a href="lalande.html#thorium">Thorium</a></li>
+         </ul>
+         </li>
+         <li><a href="colonies.html#3dLalande">Structures</a></li>
+        </ul>
+      </li>
 						<li><a href="colonies.html#peary">Peary</a></li>
 						<li><a href="colonies.html#orbital">Orbital</a></li>
       </ul>
@@ -22,7 +32,13 @@
 			<li><a href="machines.html">Machines</a>
       <ul>
 						<li><a href="machines.html#robots">Robots</a></li>
-						<li><a href="machines.html#building">Building</a></li>
+						<li><a href="machines.html#building">Building</a>
+       <ul>
+        <li><a href="machines.html#BasaltFiberStation">Basalt Fiber</a></li>
+        <li><a href="machines.html#MIPstation">Melt-In-Place Materials</a></li>
+        <li><a href="machines.html#HangarsOverview">Hangars</a></li>
+       </ul>
+      </li>
 						<li><a href="machines2.html#power">Power</a></li>
 						<li><a href="machines2.html#mining">Mining</a></li>
 						<li><a href="machines2.html#transport">Transport</a></li>
