--- a/_includes/PearyColony.html
+++ b/_includes/PearyColony.html
@@ -78,7 +78,7 @@
 </div>
 <section class="frameContainer" id="PearyModels">
  <div class="framePairTop">
-  <div class="framewrap frame16x9">
+  <div class="framewrap frame16x9" id="PolarFirstHab">
 						<iframe src="PolarHab.html" frameborder="0" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
 						</iframe>
 		</div>
