--- a/_includes/machines/machinesMining.html
+++ b/_includes/machines/machinesMining.html
@@ -58,7 +58,7 @@
 			</div>
 	</aside>
 	<section>
-		<div class="sideDiv">
+		<div class="blackDiv" id="Minerals">
 			<table>
 				<caption>Chemical makeup of lunar regolith. HL = Highlands,
 					LTB = Low-Ti Basalt, HTB = High-Ti Basalt. <br>From
@@ -385,7 +385,7 @@
 </div>
 <div class="container">
 	<section>
-		<div class="outerDiv">
+		<div class="outerDiv" id="Refining">
 			<div class="innerDiv">
 				<h3>Refining to get metals, oxygen, and metal oxides</h3>
 				<p>
@@ -452,7 +452,7 @@
 </section>
 <div class="container">
 	<section>
-		<div class="outerDiv">
+		<div class="outerDiv" id="Excavation">
 			<div class="innerDiv">
 				<h3>Excavation</h3>
 				<p>
