--- a/_includes/machines/machinesPowerSolarThermal.html
+++ b/_includes/machines/machinesPowerSolarThermal.html
@@ -67,7 +67,7 @@
 	</aside>
 </div>
 <section class="frameContainer">
- <div class="framePairTop">
+ <div class="framePairTop" id="TESS">
 		<div class="framewrap frame16x9">
 						<iframe src="TESS.html" frameborder="0" allowfullscreen
 						mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
