--- a/sass/_blocks-objects.sass
+++ b/sass/_blocks-objects.sass
@@ -38,6 +38,11 @@ aside
   +RadiusOut
   background-color: $outerBkgd
 
+.blackDiv
+  +RadiusOut
+  background-color: $sideBkgd
+  padding: $mainPad
+
 .innerDiv
   +RadiusIn
   +display(flex)
