--- a/_includes/learn/lunarElevator.html
+++ b/_includes/learn/lunarElevator.html
@@ -1,4 +1,4 @@
-<div class="outerDiv">
+<div class="outerDiv" id="LunarElevator">
 	<div class="innerDiv">
 		<h2>Lunar Elevator</h2>
 		<p>Start distance: (From the centre of the Moon towards Earth)</p>
