--- a/_includes/machines/machinesPowerNuclear.html
+++ b/_includes/machines/machinesPowerNuclear.html
@@ -1,6 +1,6 @@
 <div class="container">
 	<section>
-		<div class="outerDiv">
+		<div class="outerDiv" id="nuclearReactors">
 			<div class="innerDiv">
 				<h3>Nuclear Reactors</h3>
 				<p>
