--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -20,12 +20,17 @@
          <ul>
          <li><a href="lalande.html#LalSoilTemp">Rockiness</a></li>
          <li><a href="lalande.html#thorium">Thorium</a></li>
+         <li><a href="lalande.html#CraterModel">Crater Model</a></li>
          </ul>
          </li>
          <li><a href="colonies.html#3dLalande">Structures</a></li>
         </ul>
       </li>
-						<li><a href="colonies.html#peary">Peary</a></li>
+						<li><a href="colonies.html#peary">Peary</a>
+       <ul>
+        <li><a href="colonies.html#PolarFirstHab">First Polar Hab</a></li>
+       </ul>
+      </li>
 						<li><a href="colonies.html#orbital">Orbital</a></li>
       </ul>
 			</li>
@@ -35,19 +40,47 @@
 						<li><a href="machines.html#building">Building</a>
        <ul>
         <li><a href="machines.html#BasaltFiberStation">Basalt Fiber</a></li>
-        <li><a href="machines.html#MIPstation">Melt-In-Place Materials</a></li>
+        <li><a href="machines.html#MIPstation">Melt-In-Place</a></li>
         <li><a href="machines.html#HangarsOverview">Hangars</a></li>
        </ul>
       </li>
-						<li><a href="machines2.html#power">Power</a></li>
-						<li><a href="machines2.html#mining">Mining</a></li>
-						<li><a href="machines2.html#transport">Transport</a></li>
+						<li><a href="machines2.html#power">Power</a>
+       <ul>
+        <li><a href="machines2.html#TESS">Solar Thermal</a></li>
+        <li>
+        <li><a href="machines2.html#nuclearReactors">Nuclear Reactors</a></li>
+       </ul>
+      </li>
+						<li><a href="machines2.html#mining">Mining</a>
+	      <ul>
+	      <li><a href="machines2.html#Minerals">Minerals</a></li>
+        <li><a href="machines2.html#Refining">Refining</a></li>
+        <li><a href="machines2.html#Excavation">Excavation</a></li>
+	      </ul>
+      </li>
+						<li><a href="machines2.html#transport">Transport</a>
+	      <ul>
+        <li><a href="machines2.html#nuclearShuttles">Nuclear Shuttles</a></li>
+        <li><a href="machines2.html#CargoShip">Cargo Ship</a></li>
+        <li><a href="machines2.html#TetherTransport">Vertical Tethers</a></li>
+	      </ul>
+      </li>
 					</ul>
 			</li>
 			<li><a href="learn.html">Learn</a>
 					<ul>
-						<li><a href="learn.html#tryit">Try It</a></li>
-						<li><a href="learn.html#lessons">Lessons</a></li>
+						<li><a href="learn.html#tryit">Try It</a>
+       <ul>
+       <li><a href="learn.html#SuborbitalHop">Suborbital Hop</a></li>
+       <li><a href="learn.html#LunarElevator">Lunar Elevator</a></li>
+      </ul>
+    </li>
+				<li><a href="learn.html#lessons">Orbital Mechanics</a>
+      <ul>
+      <li><a href="learn.html#TransferOrbits">Transfer Orbits</a></li>
+      <li><a href="learn.html#EscapeVelocity">Escape Velocity</a></li>
+      </ul>
+      </li>
 					</ul>
 			</li>
 		</ul>
