--- a/sass/_nav.sass
+++ b/sass/_nav.sass
@@ -9,8 +9,10 @@ nav
 nav > ul
   list-style-type: none
   width: 100%
-  height: 1.7rem
+  height: 1.8rem
+  line-height: 1.5rem
   margin: 0
+  margin-top: 0.2rem
   padding: 0
 
 nav a
@@ -37,14 +39,14 @@ nav li ul a:hover
 
 nav > ul > li
   display: inline
-  font-size: 1.2rem
+  font-size: 1.1rem
   font-weight: 300
   position: absolute
-  top: 0
+  top: 0.2rem
 
 nav > ul > li:nth-child(1)
-  left: 0.5rem
-  ul
+  left: 1rem
+  > ul
     position: relative
     top: 0
 
