move learn sass into _block-objects.sass
Former-commit-id: f50c50525b1716710c15dccc4289c86198746685 [formerly 9add88c9c042736306abc5aeb1b3e5e2c6db1d21]
Former-commit-id: 3aa6d0e0f6f9c88e59ceb9d855f89039edb89c97

--- a/sass/_blocks-objects.sass
+++ b/sass/_blocks-objects.sass
@@ -7,22 +7,29 @@
   +align-items(flex-start)
   width: 100%
 
+.containerLearn
+  width: 94%
+  margin: auto
 
 section
   +display(flex)
   +flex(3 0 350px)
-  +flex-direction(column)
+  +flex-flow(column nowrap)
   padding: $mainPad
   margin-top: 3rem
   margin-left: 2rem
 
-section .learn
+section.calc
   +display(flex)
-  +flex(0 1 350px)
   +flex-flow(row wrap)
   +justify-content(flex-start)
   +align-items(flex-start)
-  width: 90%
+  +flex(0 1 0)
+  margin-right: auto
+  margin-bottom: 4rem
+
+.wide
+  +flex(1 1 900px)
 
 aside
   +flex(1 1 300px)
@@ -54,6 +61,19 @@ aside
     padding: 0.5rem 1.2rem
     margin: 0
     +align-self(flex-start)
+
+.calcDiv
+  +RadiusIn
+  +display(flex)
+  +flex-flow(column nowrap)
+  +align-items(flex-end)
+  +justify-content(center)
+  background-color: $innerBkgd
+  margin: 15px
+  p, img
+    +align-self(center)
+  p
+    width: calc(100% - 3rem)
 
 .pixWrap
   +display(flex)
