--- a/sass/_nav.sass
+++ b/sass/_nav.sass
@@ -28,7 +28,7 @@ nav a
     color: $navAHover
 
 nav li ul
-  background-color: $aHoverBk
+  background-color: $extraDarkAccent
   list-style-type: none
 
 nav li ul a
@@ -79,6 +79,7 @@ nav > ul > li > ul
   padding: 0.2rem 1rem 1rem 1rem
   border-radius: 15px
   margin: 0
+  border: 1px solid $darkAccent
 
 /* Statement applies only to
   child ul, only when li is hovered
