--- a/sass/_style-vars.sass
+++ b/sass/_style-vars.sass
@@ -11,6 +11,7 @@ $navAHover: yellow
 $headingColor: rgb(150, 145, 45)
 $lightAccent: rgb(115, 115, 15)
 $darkAccent: rgb(80, 80, 15)
+$extraDarkAccent: rgb(47, 52, 0)
 $introRadius: 0 1.5rem 1.5rem 0
 $figcapSize: 0.8rem
 $linx: yellow
