--- a/sass/learn.sass
+++ b/sass/learn.sass
@@ -4,7 +4,7 @@
 @import '_text-styles.sass'
 @import '_nav.sass'
 @import '_contentHeader.sass'
-@import '_blocks-objects.learn.sass'
+@import '_blocks-objects.sass'
 @import '_tooltipster.sass'
 @import '_details.sass'
 @import '_tables.sass'
