--- a/sass/_siglearn.sass
+++ b/sass/_siglearn.sass
@@ -12,7 +12,7 @@
 #applet_container2
 	width: 500px
 	height: 500px
-	align-self: center
+	+align-self(center)
 	padding: 10px
 	margin-bottom: 20px
 
