removing use of old classes
Former-commit-id: c89c4032ba86877a295ae36b234725ed0bedabd5 [formerly e74cf700e3d842cdc840b97dda0a8db8dad3725d]
Former-commit-id: 3ef47ce56f399ad89d9663762823cdb7f9b5a85c

--- a/_includes/learn/lunarElevator.html
+++ b/_includes/learn/lunarElevator.html
@@ -11,9 +11,9 @@
 		<span>use Zylon<input type="checkbox" id="zylon"></span>
 		<span>I want the mass of the elevator too!<input type="checkbox" id="tethermass"></span>
 		<p>Parameters required to calculate elevator mass:</p>
-		<p class="formBuffer">Payload mass:</p>
+		<p>Payload mass:</p>
 		<input type="text" placeholder="(kg)" value="" id="payloadmass">
-		<p class="formBuffer">Safety factor:</p>
+		<p>Safety factor:</p>
 		<input type="text" value="1.1" id="safety">
 		<button onclick="tether()">Calculate!</button>
 		<canvas id="tetherCanvas" width="400" height="100"></canvas>
