--- a/_includes/learn/rocketEquation.html
+++ b/_includes/learn/rocketEquation.html
@@ -1,13 +1,13 @@
 				<script src="js/rocketEquation.js"></script>
 				<h2>The Rocket Equation</h2>
-				<p class="frameBuffer">Mass ratio:</p>
+				<p>Mass ratio:</p>
 				<input
 					type="text"
 					title="Start mass divided by end mass"
 					placeholder="Start mass divided by end mass"
 					value=""
 					id="massratioRE">
-				<p class="frameBuffer">Exhaust velocity: (m/s)</p>
+				<p>Exhaust velocity: (m/s)</p>
 				<input
 					type="text"
 					placeholder="Velocity of the rocket exhaust"
