--- a/_includes/learn/suborbital.html
+++ b/_includes/learn/suborbital.html
@@ -22,5 +22,5 @@
 </script>
 <!--geogebra applet-->
 <script type="text/javascript" src="https://www.geogebra.org/scripts/deployggb.js"></script>
-<div id="applet_container1"></div>
+<div id="applet_container1" style="width:500px;height:355px;display:block;"></div>
 <!--end geogebra applet-->
