complete division of pages into includes
Former-commit-id: bebd7621257da9f8527f1b0d8189684ac00e26ca

--- a/_includes/transport/transportTethers.html
+++ b/_includes/transport/transportTethers.html
@@ -33,276 +33,15 @@
 		</div>
 	</section>
 	<aside>
-		<div class="sidePairTop">
-<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="600" height="600" viewBox="0 0 600 600">
-	<rect x="0" y="0" width="100%" height="100%" fill="black"/>
-	<circle cx="300" cy="300" r="72" fill="grey" stroke="white" stroke-width="10"/>
-	<circle cx="300" cy="300" r="180" fill="none" stroke="white" stroke-width="1"/>
-	<g>
-		<line x1="410" y1="300" x2="590" y2="300" stroke-width="2" stroke="white"/>
-		<circle cx="480" cy="300" r="5" fill="white"/>
-		<animateTransform
-			attributeName="transform"
-			attributeType="XML"
-			type="rotate"
-			values="0 300 300;1080 300 300"
-			dur="15s"
-			begin="0s"/>
-	</g>
-	<g>
-		<g>
-		<g>
-			<g>
-				<rect x="380" y="295" width="10" height="10" fill="blue"/>
-				<rect x="371" y="295" width="10" height="10" fill="blue">
-					<animate attributeName="fill" attributeType="XML" begin="3s" dur="1s" fill="freeze" from="blue" to="red" />
-					<animate attributeName="fill" attributeType="XML" begin="6s" dur="1s" fill="freeze" from="red" to="blue" />
-				</rect>
-				<animateTransform
-					attributeName="transform"
-					attributeType="XML"
-					type="rotate"
-					values="0 380 320;40 380 320;110 380 320"
-					dur="1s"
-					begin="4.2s"
-					fill="freeze"
-				/>
-				<animateTransform
-					attributeName="transform"
-					attributeType="XML"
-					type="rotate"
-					values="110 380 320;15 380 305"
-					dur="1s"
-					begin="6s"
-					fill="freeze"
-				/>
-			</g>
-			<animateTransform
-				attributeName="transform"
-				attributeType="XML"
-				type="translate"
-				values="0 0;20 25"
-				dur="1s"
-				begin="6s"
-				fill="freeze"
-			/>
-			<animateTransform
-				attributeName="transform"
-				attributeType="XML"
-				type="translate"
-				values="20 25;350 110"
-				dur="5s"
-				begin="8s"
-				fill="freeze"
-			/>
-		</g>
-			<animateTransform
-				attributeName="transform"
-				attributeType="XML"
-				type="rotate"
-				values="0 300 300;720 300 300"
-				dur="10s"
-				begin="5.2s"
-				fill="freeze"
-			/>
-		</g>
-	</g>
- 	<image src="img/verticalTether.gif" xlink:href="">
-</svg>
-		</div>
+    {% include_relative _includes/transport/tethers/verticalTether.html %}
 	</aside>
 </div>
 <div class="container" id="AsteroidAnchors">
-	<section>
-		<div class="outerDiv">
-			<div class="innerDiv">
-				<h3>Asteroid Anchors</h3>
-				<p>
-					To get a good anchor for the tether, an asteroid retrieval mission
-					along the lines of the Keck mission architecture
-					would be needed. To get something worthwhile, the virtual colony
-					version beefs it up by a factor of 10, meaning an asteroid massing about
-					7500 metric tons. A nice one full
-					of carbon chemicals, pure metals, and hydrated minerals. That one
-					goes into a polar orbit. With it, the small initial polar colony
-					could go anywhere on the Moon every two weeks, and could lauch to
-					Earth that frequently too.
-				</p>
-				<p>
-					One of the great things about combining asteroid retrieval with
-					tethers, is that it makes mining the asteroid so much easier. Most
-					of the delta v needed to get the products to a place where they can
-					be used is looked after by the tether. The colony can send machinery
-					to do the mining and run it from the surface. As material is
-					removed from the asteroid for use in the colony, they can replace the
-					mass with lunar material. In fact, they can replace it partly with
-					modules and gear they've made for a space station. An asteroid
-					mining business and a lunar colony would make great partners.
-				</p>
-				<p>
-					Once an asteroid has been placed in orbit this way, it is a lot
-					easier to do the same thing again. The full design for the Moon is
-					four tethers in staggered polar orbits and one in equatorial orbit.
-					The polar tethers would make any point on the Moon accessible every
-					3.5 days, and the equatorial tether could launch to Earth, or
-					anywhere else, twice a day. The equatorial tether would be much easier for
-					any ship from Earth (or Mars, or the ateroid belt, or anywhere) to
-					dock with than the polar tethers, requiring a plane-change of
-					a few degrees at most and a much greater range of possible
-					trajectories.
-				</p>
-			</div>
-		</div>
-	</section>
-	<aside>
-	</aside>
+    {% include_relative _includes/transport/tethers/AsteroidAnchors.html %}
 </div>
-<div class="container">
-	<section>
-		<div class="outerDiv">
-			<div class="innerDiv">
-				<h3>Tethers as Launchers</h3>
-				<p>
-					Extend tethers outwards from the anchors, heading
-					away from the lunar surface, and they become launchers. That's because the
-					foot and the tip of the tether orbit the Moon at the speed of the
-					asteroid at the center of gravity, and not at the natural orbital
-					speed for an object at their altitude. The foot moves far slower
-					than orbital speed, and the tip moves much faster. If the
-					tether's spaceward cable is 15,000 km long, terminating at an
-					altitude of 20,000 km, the outward velocity it imparts to a vessel
-					released from there is 2.7 km/s. That's more than enough to return
-					to Earth, or go to Mars, Vesta, Ceres, or Venus. It will get you most
-					of the way to Jupiter.
-				</p>
-				<p>
-					If you manage to balance the mass
-					that leaves the tethers with the mass that is received by them, you
-					can even do all this without any use of fuel. The momentum the
-					tether complex loses when something leaves is balanced by the
-					momentum gained when something arrives. In practice, though, a bunch
-					of engines on the anchor masses are needed to keep
-					orbits nice and circular and in the right spot. A few small engines would be enough to achieve this,
-					since the asteroid anchor is many times heavier than any ship, and
-					the center of gravity of the whole tether can be moved at will by
-					reeling the spaceward and moonward tethers in and out. Making the
-					platforms at the tip and foot of the tether complex good and
-					massive helps with this, and also reduces oscillations by
-					increasing the tension on the cables.
-				</p>
-			</div>
-		</div>
-	</section>
-	<aside>
-	</aside>
+<div class="container" id="tetherLaunchers">
+    {% include_relative _includes/transport/tethers/tetherLaunchers.html %}
 </div>
-<div class="container">
-	<section>
-		<div class="outerDiv">
-			<div class="innerDiv">
-				<h3>A Vertical Tether for Earth</h3>
-				<p>
-					But wait - there's more! That tether in Earth orbit mentioned in
-					the intro is the big brother of these tethers. Alright, it isn't a
-					space elevator. It would still make a gigantic difference in the ease
-					of getting to orbit. And in some ways it's better than a space elevator.
-				</p>
-				<p>
-					A vertical tether whose anchor mass orbits at an altitude of 10,000 km
-					with a foot at 250 km has the foot moving relative to the surface at
-					4.5 km/s. The minimum speed needed to orbit Earth is 7.8 km/s. The
-					speed needed to meet the foot of the tether is 43% less. The same
-					fuel as before would be needed to overcome drag, so the overall fuel
-					savings to meet the tether foot would be more like a third. Since a
-					rocket launching from Earth is at least 80% fuel, that third is a
-					really big deal. Now making a reusable rocket is easy. There is so
-					much leeway to beef up the structure of the rocket, the result would
-					be a rocket that could be safely used hundreds of times with minimal
-					maintenance and repair between flights, and the payload it could
-					carry would still be several times more than what is possible today.
-				</p>
-    <p>
-     Then you extend the tether 5000 km spaceward and again you have a launcher that can get you to the Moon, Mars, Venus, or the asteroid belt. The only fuel you need is for course corrections and braking on arrival. Transport between the Moon and Earth becomes the acrobatics of tossing vessels to and fro between the tethers, timing it all as best as possible so the momentum economy stays as even as it can. If you had the material to do it, and extended the tether tip out to 20,000, it could send you out of the Earth-Moon system at 5.7 km/s. That's enough to be on your way to any of the outer planets, and gets you most of the way to Mercury. In fact, it would be important to release your vessel from the tether at the best altitude for your destination, otherwise you will need to use a lot of fuel to brake so you don't just fly right past it.
-    </p>
-				<p>
-					By developing tethers first for lunar orbit, where the demands are
-					much lower and the consequence of total failure is limited to the
-					loss of the equipment, a path to building the tether in Earth orbit
-					is created. The technology is perfected and proven at the Moon
-					before the venture is undertaken.
-				</p>
-				<ul>
-					<li>
-					Zylon is still good enough to do
-					the job, although it takes an awful lot more of it. The spaceward tether, going to the tip, is actually under the most strain - going beyond 15,000 km wouldn't be practical without better materials.  At 15,000 km, the tether
-					needs to be at least 10 times thicker where it attaches to the
-					anchor than it is at the tip in order to safely bear the loads on it.
-					For a decent safety margin, more like 15 times as thick.
-				</li>
-				<li>The anchor mass
-					is just outside the inner Van Allen Belt, meaning the car travelling
-					the tether has to traverse it to get there. To safely transport
-					people it would need thick and heavy shielding.
-				</li>
-				<li>
-					Powering the car
-					is much more demanding than on the Moon. A nuclear power plant like
-					nuclear submarines use will be the solution used on Moonwards.
-				</li>
-				<li>
-					Earth orbit is crowded. The trajectories of everything up there would
-					need to be much better tracked in order to anticipate collisions with
-					the tether complex. It would need to be able to take steps to evade
-					things, and to move things that are getting too close. Repair and
-					maintenance on the cable would be a continuous task far more
-					demanding than such jobs on a lunar tether.
-    </li>
-    <li>
-     It would be important,
-					and logical, that the space station at the anchor host an
-					extensive repair and maintenance service for satellites. It needs
-					that just to protect itself from collisions with space junk.
-				</li>
-    <li>
-    An approach to satellite orbits based around the priorities of the tether complex would help a lot with collision issues. Three orbital altitudes would be strongly preferred: below 250 km, where the tether foot is, at the altitude of the anchor body (but only if the satellite will move in an orbit similar to the anchor), and above the tether tip. Since the tether complex can help a great deal with satellite deployment, and maintenance, there would be a strong incentive to choose orbits that pose no threat to it.
-    </li>
-			</ul>
-				<p>
-					It's a much
-					bigger project to build this thing than to do the same thing at the
-					Moon. There sure is a huge payoff, though. The tether orbiting the
-					Earth appears on the Moonwards timeline far enough down the road for
-					it to be justified to assume stronger materials have been found by that
-					time. This doesn't require the idealized carbon nanotube cables
-					dreamed of in space elevator projects, but cables of less perfect
-					carbon nanotubes or graphene would help so much they are being taken
-					as existing - something that reduces the taper ratio to, say, 3
-					instead of 10.
-				</p>
-    <p>
-     There is lots of room to play with this idea. Down the road the anchor mass could be moved into a higher orbit, lowering the speed needed to reach its foot even further. If it orbits at 20,000 km the speed of its foot is 3.4 km/s relative to Earth's surface. If the spaceward tether extends another 10,000 km a vessel released from there would receive a speed boost of 2.6 km/s for interplanetary travel. The best balance of where to place the anchor mass would have to do with the power and time needed to travel along the cables, the maintenance needs of the complex, and the economics of using rocket engines rather than relying on tethers.
-    </p>
-    <p>
-     One thing that could be an important consideration is the ease of dropping payloads from the tether foot that then descend to the surface pretty passively. Every km/s shaved off the entry speed of a vessel reduces the demands on a heat shield a lot. At some velocity, it becomes viable to design drop vessels that use aerodynamic lift to reduce speed and maneuver. With rocket fuel sourced from space, it could become cheap to have rockets that leave the foot, accelerate retrograde down to a few hundred meters a second relative to Earth's surface, drop their load, and accelerate back to the tether foot again. That is about 7 km/s of delta V, but the rocket would be a lot lighter on the way back, which saves on fuel. And fuel from space could become cheap. Then you would need drop vessels that can reduce their speed and direct themselves enough to deploy parachutes and land safely in a reasonably well defined area, probably at sea. That could be worth it, if each one is carrying a ton of platinum.
-    </p>
-    <p>
-     Advantages such a structure has over a space elevator:
-    </p>
-    <ul>
-     <li>The climb to the anchor is less than a third of the distance to an anchor in geosynchronous orbit. As cars on the cable can only go so fast, the time savings in the trip is helpful. Beaming the power the car needs for the climb from the anchor is also viable over a larger fraction of its journey, allowing the onboard nuclear reactor to be smaller and safer.
-     </li>
-     <li>The cross-section of the cable is much less than that of a space elevator because the loads it must bear are much lower. Not only only could several such tethers be made with the amount of material needed for one space elevator, if there is a grave accident and the cable is cut, the risk it represents is far less. Cable designs are usually based on ribbons with an open weave. By the time and object with that shape and mass had passed through Earth's atmosphere, it may either have mostly disintegrated, or have slowed to a minimal speed and drift to a soft landing.
-     </li>
-     <li>The security needed to protect an installation that starts 250 km above the Earth is much less than what is needed to protect something that reaches the ground.
-     </li>
-     <li>The launch boost the tether can provide is more, over a shorter distance, than a space elevator can provide, because it is deeper in Earth's gravitational well.
-     </li>
-     <li>Because satellites can be shifted over time to orbits that don't interfere with the tether, the demands of avoidance collision will eventually be minimal. A space elevator would always cut through all orbital elevations below geosynchronous.
-     </li>
-    </ul>
-			</div>
-		</div>
-	</section>
-	<aside>
-	</aside>
+<div class="container" id="EarthTether">
+    {% include_relative _includes/transport/tethers/EarthTether.html %}
 </div>
