--- a/_includes/transport/tethers/verticalTether.html
+++ b/_includes/transport/tethers/verticalTether.html
@@ -1,77 +1,80 @@
-		<div class="sidePairTop">
-<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="600" height="600" viewBox="0 0 600 600">
-	<rect x="0" y="0" width="100%" height="100%" fill="black"/>
-	<circle cx="300" cy="300" r="72" fill="grey" stroke="white" stroke-width="10"/>
-	<circle cx="300" cy="300" r="180" fill="none" stroke="white" stroke-width="1"/>
-	<g>
-		<line x1="410" y1="300" x2="590" y2="300" stroke-width="2" stroke="white"/>
-		<circle cx="480" cy="300" r="5" fill="white"/>
-		<animateTransform
-			attributeName="transform"
-			attributeType="XML"
-			type="rotate"
-			values="0 300 300;1080 300 300"
-			dur="15s"
-			begin="0s"/>
-	</g>
-	<g>
-		<g>
-		<g>
-			<g>
-				<rect x="380" y="295" width="10" height="10" fill="blue"/>
-				<rect x="371" y="295" width="10" height="10" fill="blue">
-					<animate attributeName="fill" attributeType="XML" begin="3s" dur="1s" fill="freeze" from="blue" to="red" />
-					<animate attributeName="fill" attributeType="XML" begin="6s" dur="1s" fill="freeze" from="red" to="blue" />
-				</rect>
-				<animateTransform
-					attributeName="transform"
-					attributeType="XML"
-					type="rotate"
-					values="0 380 320;40 380 320;110 380 320"
-					dur="1s"
-					begin="4.2s"
-					fill="freeze"
-				/>
-				<animateTransform
-					attributeName="transform"
-					attributeType="XML"
-					type="rotate"
-					values="110 380 320;15 380 305"
-					dur="1s"
-					begin="6s"
-					fill="freeze"
-				/>
-			</g>
-			<animateTransform
-				attributeName="transform"
-				attributeType="XML"
-				type="translate"
-				values="0 0;20 25"
-				dur="1s"
-				begin="6s"
-				fill="freeze"
-			/>
-			<animateTransform
-				attributeName="transform"
-				attributeType="XML"
-				type="translate"
-				values="20 25;350 110"
-				dur="5s"
-				begin="8s"
-				fill="freeze"
-			/>
-		</g>
-			<animateTransform
-				attributeName="transform"
-				attributeType="XML"
-				type="rotate"
-				values="0 300 300;720 300 300"
-				dur="10s"
-				begin="5.2s"
-				fill="freeze"
-			/>
-		</g>
-	</g>
+<div class="sidePairTop">
+  <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="600" height="600" viewBox="0 0 600 600">
+  	<rect x="0" y="0" width="100%" height="100%" fill="black"/>
+  	<circle cx="300" cy="300" r="72" fill="grey" stroke="white" stroke-width="10"/>
+  	<circle cx="300" cy="300" r="180" fill="none" stroke="white" stroke-width="1"/>
+  	<g>
+  		<line x1="410" y1="300" x2="590" y2="300" stroke-width="2" stroke="white"/>
+  		<circle cx="480" cy="300" r="5" fill="white"/>
+  		<animateTransform
+  			attributeName="transform"
+  			attributeType="XML"
+  			type="rotate"
+  			values="0 300 300;1080 300 300"
+  			dur="15s"
+  			begin="0s"/>
+  	</g>
+  	<g>
+  		<g>
+  		<g>
+  			<g>
+  				<rect x="380" y="295" width="10" height="10" fill="blue"/>
+  				<rect x="371" y="295" width="10" height="10" fill="blue">
+  					<animate attributeName="fill" attributeType="XML" begin="3s" dur="1s" fill="freeze" from="blue" to="red" />
+  					<animate attributeName="fill" attributeType="XML" begin="6s" dur="1s" fill="freeze" from="red" to="blue" />
+  				</rect>
+  				<animateTransform
+  					attributeName="transform"
+  					attributeType="XML"
+  					type="rotate"
+  					values="0 380 320;40 380 320;110 380 320"
+  					dur="1s"
+  					begin="4.2s"
+  					fill="freeze"
+  				/>
+  				<animateTransform
+  					attributeName="transform"
+  					attributeType="XML"
+  					type="rotate"
+  					values="110 380 320;15 380 305"
+  					dur="1s"
+  					begin="6s"
+  					fill="freeze"
+  				/>
+  			</g>
+  			<animateTransform
+  				attributeName="transform"
+  				attributeType="XML"
+  				type="translate"
+  				values="0 0;20 25"
+  				dur="1s"
+  				begin="6s"
+  				fill="freeze"
+  			/>
+  			<animateTransform
+  				attributeName="transform"
+  				attributeType="XML"
+  				type="translate"
+  				values="20 25;350 110"
+  				dur="5s"
+  				begin="8s"
+  				fill="freeze"
+  			/>
+  		</g>
+  			<animateTransform
+  				attributeName="transform"
+  				attributeType="XML"
+  				type="rotate"
+  				values="0 300 300;720 300 300"
+  				dur="10s"
+  				begin="5.2s"
+  				fill="freeze"
+  			/>
+  		</g>
+  	</g>
  	<image src="img/verticalTether.gif" xlink:href="">
 </svg>
-		</div>
+</div>
+<div class="sidePairBottom">
+This animation shows a rocket meeting the bottom of the tether, climbing to the anchor, and continuing on up the outer tether until it is released into space. You get a feel for how a ship that did this would get a lot of speed from being flung off the outer tether. It would probably be more practical to trasfer a payload from a shuttle that meets the tether foot, to a car that climbs to the anchor, that then transfers it to another ship, and that ship is ferried up the outer tether attached to another cable car, until it is released.
+</div>
