divide mining into includes, add font resize at min screen width for tables
Former-commit-id: 62e5d1045214e4ddd391c4bb20932c84a9b86b30

--- a/sass/_tables.sass
+++ b/sass/_tables.sass
@@ -1,8 +1,9 @@
 table
   border-collapse: collapse
   border: 1px solid $darkAccent
-  font-size: 0.8rem
-
+  font-size: 1rem
+  @media only screen and (max-width: 775px)
+    font-size: 0.8rem
 
 th, td
   padding: 5px 10px
