--- a/_includes/transport/transportIondrive.html
+++ b/_includes/transport/transportIondrive.html
@@ -7,7 +7,7 @@
 								Ion egines have now been used to take probes to several asteroids.
 								NASA's NEXT ion thruster is rated as having an exhaust velocity of
 								nearly 40 000 m/s (I<sub>sp</sub> of 4190 s). They burn their fuel
-								only a very little at a time, so they are slow to accelerate
+								only a very little at a time, limited by electrical power. They are therefore slow to accelerate
 								a ship enough to get it somewhere.
 								That could make them good for getting a cargo ship from low Earth orbit to
 								lunar orbit. The mass saved because less fuel is needed means a
@@ -15,15 +15,15 @@
 								in I<sub>sp</sub> suggests -
 								the mass of solar panels needed to power the drives eats
 								a little into payload mass, and the slow, spiraling trajectories
-								used by low-thrust motors takes a bit more fuel. But several times
-								more than chemical rockets could deliver.
+								used by low-thrust motors takes a bit more fuel. But the payload is still several times
+								more than chemical rockets, or even nuclear, could deliver.
 								Ion drives are durable, too,
 								so the cargo ship could make the run a bunch of times before it
 								needed maintenance.
 							</p>
-       <p>
-        However, it would take about 2 years for the cargo ship to complete a run, and that could be a damaging bottleneck for the overall project. The early missions are primarily to test prototype robots. Once that test data is in the next iteration of robots would be ready in much less than the year it takes for the cargo ship to return, and then the engineering teams would have to wait a further year for the new versions to be tested, and again a year to send the following versions. Since there will be at least one crewed mission in support of that testing, which couldn't possibly use an ion-drive ship to get to the Moon, there will also necessarily be at least one large mission using conventional hydrolox (burning hydrogen and oxygen) upper stage engines. So, the cargo ship might as well have next-generation hydrolox engines. After the first tether orbiting the Moon is complete, there would be no further role for an ion-drive ship on the Earth-Moon run, either. A cargo ship with hydrolox engines will need maintenance in orbit earlier, but a space station in support of these missions is needed anyways, so that is no issue.
-       </p>
+							<p>
+        However, it would take about 4 months for the cargo ship to complete a run, and that could be a damaging bottleneck for the overall project. The early missions are primarily to test prototype robots. Once that test data is in the next iteration of robots would be ready in much less than the year it takes for the cargo ship to return, and then the engineering teams would have to wait a further year for the new versions to be tested, and again a year to send the following versions. Since there will be at least one crewed mission in support of that testing, which couldn't possibly use an ion-drive ship to get to the Moon, there will also necessarily be at least one large mission using conventional hydrolox (burning hydrogen and oxygen) upper stage engines. So, the cargo ship might as well have next-generation hydrolox engines. After the first tether orbiting the Moon is complete, there would be no further role for an ion-drive ship on the Earth-Moon run, either. A cargo ship with hydrolox engines will need maintenance in orbit earlier, but a space station in support of these missions is needed anyways, so that is no issue.
+							</p>
 							<p>
         For launching from the Moon to deep space destinations like Mars or Venus, low-thrust ion drives could be a good choice. Neumann drives would be even better if
 								they are successfully developed. They look promising as long as no
