--- a/_includes/transport/transportNuclearShuttles.html
+++ b/_includes/transport/transportNuclearShuttles.html
@@ -10,23 +10,23 @@
 					is a ship that would be used only in space, preferably beyond Earth
 					orbit. Launching a ship like that presents
 					<a href="http://space.stackexchange.com/a/16609/4660">absolutely no radiation
-					risk</a>. The fuel is not radioactive until you start to burn it, and
+					risk</a>. The fuel is not more radioactive than rocks until you start to burn it, and
 					since it is only for use in space, you simply don't turn the engines on until
 					you are safely away from Earth. If this was commonly understood half
 					a century ago, we'd be living in a completely different world.
 				</p>
 				<p>
 					Nuclear ships could attain a specific impulse of 900 to 1000 seconds
-					if we rebuilt that 1960s technology. That's a measure of fuel efficiency.
+					if we rebuilt that 1960s technology. That's a measure of propellant efficiency.
 					Another way of saying it is that a nuclear engine could heat its
 					fuel so hot it would be moving at 9000 to 10 000 m/s when it exited
 					the rocket nozzles. That speed is what determines how hard the
 					rocket is pushed in the opposite direction by that exhaust.
 					The best chemical rockets have exhaust velocities
 					of 4400 m/s in space, so a nuclear engine could speed up or slow
-					down a ship by twice as much as the best high-thrust engines we have.
+					down a ship by twice as much as the best chemical engines we have.
 					The virtual colonies use them as shuttles from the lunar surface
-					to lunar orbit. That involves about 5 km/s of delta V. Cargo ships coming to lunar orbit can have larger payloads by handing off their cargo to the shuttle and staying in orbit. 
+					to lunar orbit. That involves about 4 km/s of delta V for a round trip. Cargo ships coming to lunar orbit can have larger payloads by handing off their cargo to the shuttle and staying in orbit. More information about how a nulclear rocket engine works can be found on the <a href="wackyTech.html#nuclear">tech site</a>.
 				</p>
 			</div>
 		</div>
